sample fixes for Arena API change.
Reviewed-by: mcimadamore